Fix height overflow problem by fixing the header to the top

--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,16 @@ body {
     transition-timing-function: cubic-bezier(0.4, 0.0, 0.2, 1) !important;
 }
 .header {
-    position: absolute;
+    position: fixed;
     height: 100vh;
     width: 100vw;
     overflow: hidden;
+    z-index: 9000;
+    background: white;
+    transition: height .4s;
+}
+.header.project-page {
+    height: 165px;
 }
     .header .intro {
         text-decoration: none;
